@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-18T00:33:36Z",
+  "timestamp" : "2022-05-18T16:10:26Z",
   "count_outdated" : 1144,
   "uniques_outdated" : 70,
-  "count" : 1538,
-  "uniques" : 84,
+  "count" : 1541,
+  "uniques" : 85,
   "views" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 4,
       "count_minmax": [ 3, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
