@@ -1,5 +1,5 @@
 {
-  "count": 394,
+  "count": 397,
   "uniques": 3,
   "views": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
