@@ -1,3 +1,10 @@
+2022-05-18T16:10:26Z:
+* notice: last 14d: unq all: 3 397
+* notice: prev accum: outdated-unq outdated-all / unq all: 70 1144 / 84 1538
+* notice: next accum: outdated-unq outdated-all / unq all: 70 1144 / 85 1541
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: changed dates: [2022-05-18]
+
 2022-05-18T00:33:36Z:
 * notice: last 14d: all unq: 394 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 1115 69 / 1531 84
